--- a/index.html
+++ b/index.html
@@ -55,7 +55,55 @@
             outline: none;
             box-shadow: none;
         }
-        .nft-container, .tasks-container {
+
+        /* NFT Screen Styles */
+        .nft-container {
+            display: none;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100vh;
+            background-image: url('your-background-image-url.png'); /* Replace with your background image URL */
+            background-size: cover;
+            background-position: center;
+            color: white;
+        }
+        .nft-image {
+            width: 200px;
+            height: 200px;
+            background-image: url('https://i.imgur.com/VtVDfFc.png'); /* Replace with your NFT image URL */
+            background-size: cover;
+            border-radius: 50%;
+            margin-right: 20px;
+        }
+        .nft-info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .nft-price {
+            font-size: 30px;
+            color: #FFD700;
+            margin-bottom: 10px;
+        }
+        .buy-button {
+            background-color: #ccff00;
+            color: black;
+            font-size: 20px;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            outline: none;
+            -webkit-tap-highlight-color: transparent;
+        }
+        .buy-button:focus {
+            outline: none;
+            box-shadow: none;
+        }
+
+        .tasks-container {
             display: none;
             flex-direction: column;
             align-items: flex-start;
